[project]
name = "harbinger"
dynamic = ["version"]
description = "The Decepticon ship that carries weapons of mass destruction."
readme = "README.md"
requires-python = ">=3.10"
license = "Unlicense"
keywords = ["flac", "opus", "encoder"]
authors = [
  { name = "Raventric", email = "me@ravencentric.cc" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "cyclopts~=2.9.4",
  "loguru~=0.7.2",
  "rich~=13.7.1",
  "typing-extensions~=4.12.2",
]

[project.urls]
Documentation = "https://github.com/Raventric/harbinger#readme"
Issues = "https://github.com/Raventric/harbinger/issues"
Source = "https://github.com/Raventric/harbinger"

[project.scripts]
harbinger = "harbinger.__main__:app"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]
fixable = ["ALL"]

[tool.mypy]
strict = true
pretty = true
exclude = "tests/"

[tool.hatch.version]
path = "src/harbinger/__version__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy~=1.11.1",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/harbinger}"

[tool.hatch.envs.hatch-static-analysis]
config-path = "none"

[tool.hatch.envs.hatch-test]
extra-dependencies = [
  'syrupy~=4.6.1; python_version < "4"',
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.build.targets.sdist]
only-packages = true
exclude = [
  "tests/",
]

[tool.hatch.build.targets.binary]
scripts = ["harbinger"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
